# nomad

./: Cargo.toml
nomad_macro/: Cargo.toml
nomad_macro/src/: lib.rs  migration.rs
src/: error.rs  lib.rs  migration.rs  ordered.rs
src/driver/: mod.rs  rusqlite.rs
src/driver/sqlx/: mod.rs  sqlite.rs
tests/: integration_test.rs
tests/migrations/: 1__test.sql
