[package]
name = "nomad"
version = "0.1.0"
authors = ["Olivia Trewin <trewinolivia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomad_macro = { path = "./nomad_macro" }

# sqlx
sqlx = { version = "0.4.0-beta.1", optional = true }
futures = { version = "*", optional = true }

rusqlite = { version = "< 0.24.0", optional = true }

[dev-dependencies]
nomad = { path = ".", features = ["all"] }

[features]
all = [ "sqlx-base", "sqlx-sqlite", "rusqlite-bundled" ]

sqlx-base = ["sqlx", "futures"]
sqlx-sqlite = ["sqlx-base", "sqlx/sqlite"]

rusqlite-bundled = ["rusqlite", "rusqlite/bundled"]
